--- a/tests/mdtutilsgui/CMakeLists.txt
+++ b/tests/mdtutilsgui/CMakeLists.txt
@@ -22,6 +22,6 @@ endif(NOT DEFINED QWT_FOUND)
 # * mdtIoWidgetTest executable *
 QT4_WRAP_CPP(MDT_IO_WIDGET_TEST_MOC "mdtIoWidgetTest.h")
 add_executable(mdtiowidgettest "mdtIoWidgetTest.cpp" ${MDT_IO_WIDGET_TEST_MOC})
-target_link_libraries(mdtiowidgettest "mdtutils")
-target_link_libraries(mdtiowidgettest "mdtutilsgui")
+target_link_libraries(mdtiowidgettest "mdtutils${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtiowidgettest "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtiowidgettest "mdttest")
