--- a/tools/mdtterm/CMakeLists.txt
+++ b/tools/mdtterm/CMakeLists.txt
@@ -25,13 +25,13 @@ QT4_WRAP_UI (UIC_HEADERS ${FORM_FILES})
 QT4_ADD_RESOURCES (RCC_FILES ${RESOURCE_FILES})
 
 # Executable
-add_executable (mdtterm ${GUI_TYPE} ${SOURCES_FILES} ${MOC_HEADERS} ${UIC_HEADERS} ${RCC_FILES})
+add_executable (mdtterm${MDTLIB_VERSION_SUFFIX} ${GUI_TYPE} ${SOURCES_FILES} ${MOC_HEADERS} ${UIC_HEADERS} ${RCC_FILES})
 # Libraries to link
-target_link_libraries(mdtterm "mdtutils")
-target_link_libraries(mdtterm "mdtport")
-target_link_libraries(mdtterm "mdtserialport")
-target_link_libraries(mdtterm "mdttools")
-target_link_libraries(mdtterm ${QT_LIBRARIES})
+target_link_libraries(mdtterm${MDTLIB_VERSION_SUFFIX} "mdtutils${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtterm${MDTLIB_VERSION_SUFFIX} "mdtport${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtterm${MDTLIB_VERSION_SUFFIX} "mdtserialport${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtterm${MDTLIB_VERSION_SUFFIX} "mdttools${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtterm${MDTLIB_VERSION_SUFFIX} ${QT_LIBRARIES})
 
 # Install targets
-install (TARGETS "mdtterm" RUNTIME DESTINATION bin COMPONENT tools)
+install (TARGETS "mdtterm${MDTLIB_VERSION_SUFFIX}" RUNTIME DESTINATION bin COMPONENT tools)
