--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,18 @@ endif(${CMAKE_BUILD_TYPE} STREQUAL "Release")
 # Project version
 set(MDTLIB_VERSION_MAJOR 0)
 set(MDTLIB_VERSION_MINOR 2)
-set(MDTLIB_VERSION_MICRO 7)
+set(MDTLIB_VERSION_MICRO 8)
+
+# Library version suffix:
+#  Since version 0.2.8, naming convension has changed.
+#  The problem was that API is currently ustable and breaks
+#  distributed version compatibility.
+#  The new binary library name is now: libname-VMAJOR.VMINOR
+# This convention is used for:
+#  - binary libraries
+#  - header directory
+#  - binary tools
+set(MDTLIB_VERSION_SUFFIX "-${MDTLIB_VERSION_MAJOR}.${MDTLIB_VERSION_MINOR}")
 
 # Config file
 configure_file (
@@ -88,10 +99,10 @@ endif(UNIX)
 # Libraries and headers install directories
 if(WIN32)
   set(LIB_DEST_DIR "bin")
-  set(HEADERS_DEST_DIR "include/mdt")
+  set(HEADERS_DEST_DIR "include/mdt/${MDTLIB_VERSION_SUFFIX}")
 else(WIN32)
-  set(LIB_DEST_DIR "lib")
-  set(HEADERS_DEST_DIR "include/mdt")
+  set(LIB_DEST_DIR "lib/${CMAKE_LIBRARY_ARCHITECTURE}")
+  set(HEADERS_DEST_DIR "include/mdt/${MDTLIB_VERSION_SUFFIX}")
 endif(WIN32)
 
 # * QtSolutions *
@@ -129,12 +140,12 @@ if(UNIX)
 # Exécutable pour tests
 add_executable (essais src/main.cpp)
 # Librairies à lier
-target_link_libraries(essais "mdtutils")
-target_link_libraries(essais "mdtutilsgui")
-target_link_libraries(essais "mdtport")
-target_link_libraries(essais "mdtserialport")
-target_link_libraries(essais "mdtdevice")
-target_link_libraries(essais "mdttools")
+target_link_libraries(essais "mdtutils${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(essais "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(essais "mdtport${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(essais "mdtserialport${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(essais "mdtdevice${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(essais "mdttools${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(essais ${QT_LIBRARIES})
 
 endif(UNIX)
@@ -229,8 +240,8 @@ install(FILES "${PROJECT_SOURCE_DIR}/src/config.h" DESTINATION "${HEADERS_DEST_D
 
 # Some Linux specific files
 if(UNIX)
-  install(FILES "${PROJECT_SOURCE_DIR}/dist/debian/etc/udev/rules.d/55-usb-instruments.rules" DESTINATION "/etc/udev/rules.d/" COMPONENT lib)
-  install(DIRECTORY "${PROJECT_SOURCE_DIR}/data" DESTINATION "/usr/share/mdt/" COMPONENT lib)
+  install(FILES "${PROJECT_SOURCE_DIR}/dist/debian/etc/udev/rules.d/55-usb-instruments.rules" DESTINATION "/etc/udev/rules.d/" COMPONENT data)
+  install(DIRECTORY "${PROJECT_SOURCE_DIR}/data" DESTINATION "/usr/share/mdt/" COMPONENT data)
 endif(UNIX)
 
 # Some Windows specific files
@@ -255,7 +266,7 @@ if(WIN32)
   install(FILES ${QTGUIDLL} DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
   install(FILES ${QTNETWORKDLL} DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
   #install(DIRECTORY "${PROJECT_SOURCE_DIR}/data" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
-  install(DIRECTORY "${PROJECT_SOURCE_DIR}/data" DESTINATION "." COMPONENT lib)
+  install(DIRECTORY "${PROJECT_SOURCE_DIR}/data" DESTINATION "." COMPONENT data)
   # Qt translations files
   install(FILES "${QT_TRANSLATIONS_DIR}/qt_fr.qm" DESTINATION "data/i18n" COMPONENT lib)
   install(FILES "${QT_TRANSLATIONS_DIR}/qt_de.qm" DESTINATION "data/i18n" COMPONENT lib)
@@ -299,6 +310,7 @@ if(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
   set(CPACK_COMPONENT_DEV_DISPLAY_NAME "Headers (Only needed for devloppers)")
   set(CPACK_COMPONENT_TOOLS_DISPLAY_NAME "Some little tools")
   # Dependancies
+  set(CPACK_COMPONENT_LIBS_DEPENDS data)
   set(CPACK_COMPONENT_DEV_DEPENDS lib)
   set(CPACK_COMPONENT_TOOLS_DEPENDS lib)
   # Some Debian package specific varaibles
@@ -311,7 +323,7 @@ if(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
     # set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS TRUE)
   #endif(UNIX)
 
-  set(CPACK_COMPONENTS_ALL lib dev tools)
+  set(CPACK_COMPONENTS_ALL lib dev tools data)
 
   # Keep this instruction at last
   include(CPack)
@@ -325,7 +337,7 @@ endif(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
 #### lib package ####
 if(UNIX)
   file(WRITE  package_debian_lib.cmake "SET(CPACK_CMAKE_GENERATOR \"Unix Makefiles\")\n")
-  file(APPEND package_debian_lib.cmake "SET(CPACK_DEBIAN_PACKAGE_DEPENDS \"libqtcore4 (>= 4:4.7.0), libqtgui4 (>= 4:4.7.0), libstdc++6 , libgcc1 , libc6, libusb-1.0-0 (>=1.0)\")\n")
+  file(APPEND package_debian_lib.cmake "SET(CPACK_DEBIAN_PACKAGE_DEPENDS \"libqtcore4 (>= 4:4.7.0), libqtgui4 (>= 4:4.7.0), libstdc++6 , libgcc1 , libc6, libusb-1.0-0 (>=1.0), ${CMAKE_PROJECT_NAME}-data (>= ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})\")\n")
   file(APPEND package_debian_lib.cmake "SET(CPACK_DEBIAN_PACKAGE_PRIORITY \"optional\")\n")
   file(APPEND package_debian_lib.cmake "SET(CPACK_DEBIAN_PACKAGE_SECTION \"libs\")\n")
   file(APPEND package_debian_lib.cmake "SET(CPACK_GENERATOR \"DEB\")\n")
@@ -335,8 +347,8 @@ if(UNIX)
   file(APPEND package_debian_lib.cmake "SET(CPACK_PACKAGE_DEFAULT_LOCATION \"/\")\n")
   file(APPEND package_debian_lib.cmake "SET(CPACK_PACKAGE_DESCRIPTION \"Multi Diag Tools library\")\n")
   file(APPEND package_debian_lib.cmake "SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY \"Multi Diag Tools is a library that offers some connectivity to instruments\")\n")
-  file(APPEND package_debian_lib.cmake "SET(CPACK_PACKAGE_FILE_NAME \"${CMAKE_PROJECT_NAME}-lib_${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}_${CMAKE_SYSTEM_PROCESSOR}\")\n")
-  file(APPEND package_debian_lib.cmake "SET(CPACK_PACKAGE_NAME \"${CMAKE_PROJECT_NAME}-lib\")\n")
+  file(APPEND package_debian_lib.cmake "SET(CPACK_PACKAGE_FILE_NAME \"${CMAKE_PROJECT_NAME}${MDTLIB_VERSION_SUFFIX}-lib_${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}_${CMAKE_SYSTEM_PROCESSOR}\")\n")
+  file(APPEND package_debian_lib.cmake "SET(CPACK_PACKAGE_NAME \"${CMAKE_PROJECT_NAME}${MDTLIB_VERSION_SUFFIX}-lib\")\n")
   file(APPEND package_debian_lib.cmake "SET(CPACK_PACKAGE_VENDOR \"Philippe\")\n")
   file(APPEND package_debian_lib.cmake "SET(CPACK_PACKAGE_VERSION \"${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}\")\n")
   file(APPEND package_debian_lib.cmake "SET(CPACK_PACKAGE_VERSION_MAJOR \"${CPACK_PACKAGE_VERSION_MAJOR}\")\n")
@@ -352,7 +364,7 @@ endif(UNIX)
 #### dev package ####
 if(UNIX)
   file(WRITE  package_debian_dev.cmake "SET(CPACK_CMAKE_GENERATOR \"Unix Makefiles\")\n")
-  file(APPEND package_debian_dev.cmake "SET(CPACK_DEBIAN_PACKAGE_DEPENDS \"libqt4-dev (>= 4:4.7.0), make, libusb-1.0-0-dev (>=1.0), ${CMAKE_PROJECT_NAME}-lib (>= ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})\")\n")
+  file(APPEND package_debian_dev.cmake "SET(CPACK_DEBIAN_PACKAGE_DEPENDS \"libqt4-dev (>= 4:4.7.0), make, libusb-1.0-0-dev (>=1.0), ${CMAKE_PROJECT_NAME}${MDTLIB_VERSION_SUFFIX}-lib (>= ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})\")\n")
   file(APPEND package_debian_dev.cmake "SET(CPACK_DEBIAN_PACKAGE_PRIORITY \"optional\")\n")
   file(APPEND package_debian_dev.cmake "SET(CPACK_DEBIAN_PACKAGE_SECTION \"libs\")\n")
   file(APPEND package_debian_dev.cmake "SET(CPACK_GENERATOR \"DEB\")\n")
@@ -362,8 +374,8 @@ if(UNIX)
   file(APPEND package_debian_dev.cmake "SET(CPACK_PACKAGE_DEFAULT_LOCATION \"/\")\n")
   file(APPEND package_debian_dev.cmake "SET(CPACK_PACKAGE_DESCRIPTION \"Multi Diag Tools library\")\n")
   file(APPEND package_debian_dev.cmake "SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY \"Multi Diag Tools is a library that offers some connectivity to instruments\")\n")
-  file(APPEND package_debian_dev.cmake "SET(CPACK_PACKAGE_FILE_NAME \"${CMAKE_PROJECT_NAME}-dev_${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}\")\n")
-  file(APPEND package_debian_dev.cmake "SET(CPACK_PACKAGE_NAME \"${CMAKE_PROJECT_NAME}-dev\")\n")
+  file(APPEND package_debian_dev.cmake "SET(CPACK_PACKAGE_FILE_NAME \"${CMAKE_PROJECT_NAME}${MDTLIB_VERSION_SUFFIX}-dev_${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}\")\n")
+  file(APPEND package_debian_dev.cmake "SET(CPACK_PACKAGE_NAME \"${CMAKE_PROJECT_NAME}${MDTLIB_VERSION_SUFFIX}-dev\")\n")
   file(APPEND package_debian_dev.cmake "SET(CPACK_PACKAGE_VENDOR \"Philippe\")\n")
   file(APPEND package_debian_dev.cmake "SET(CPACK_PACKAGE_VERSION \"${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}\")\n")
   file(APPEND package_debian_dev.cmake "SET(CPACK_PACKAGE_VERSION_MAJOR \"${CPACK_PACKAGE_VERSION_MAJOR}\")\n")
@@ -379,7 +391,7 @@ endif(UNIX)
 #### tools package ####
 if(UNIX)
   file(WRITE  package_debian_tools.cmake "SET(CPACK_CMAKE_GENERATOR \"Unix Makefiles\")\n")
-  file(APPEND package_debian_tools.cmake "SET(CPACK_DEBIAN_PACKAGE_DEPENDS \"${CMAKE_PROJECT_NAME}-lib (>= ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})\")\n")
+  file(APPEND package_debian_tools.cmake "SET(CPACK_DEBIAN_PACKAGE_DEPENDS \"${CMAKE_PROJECT_NAME}${MDTLIB_VERSION_SUFFIX}-lib (>= ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})\")\n")
   file(APPEND package_debian_tools.cmake "SET(CPACK_DEBIAN_PACKAGE_PRIORITY \"optional\")\n")
   file(APPEND package_debian_tools.cmake "SET(CPACK_DEBIAN_PACKAGE_SECTION \"libs\")\n")
   file(APPEND package_debian_tools.cmake "SET(CPACK_GENERATOR \"DEB\")\n")
@@ -389,8 +401,8 @@ if(UNIX)
   file(APPEND package_debian_tools.cmake "SET(CPACK_PACKAGE_DEFAULT_LOCATION \"/\")\n")
   file(APPEND package_debian_tools.cmake "SET(CPACK_PACKAGE_DESCRIPTION \"Multi Diag Tools library\")\n")
   file(APPEND package_debian_tools.cmake "SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY \"Multi Diag Tools is a library that offers some connectivity to instruments\")\n")
-  file(APPEND package_debian_tools.cmake "SET(CPACK_PACKAGE_FILE_NAME \"${CMAKE_PROJECT_NAME}-tools_${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}_${CMAKE_SYSTEM_PROCESSOR}\")\n")
-  file(APPEND package_debian_tools.cmake "SET(CPACK_PACKAGE_NAME \"${CMAKE_PROJECT_NAME}-tools\")\n")
+  file(APPEND package_debian_tools.cmake "SET(CPACK_PACKAGE_FILE_NAME \"${CMAKE_PROJECT_NAME}${MDTLIB_VERSION_SUFFIX}-tools_${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}_${CMAKE_SYSTEM_PROCESSOR}\")\n")
+  file(APPEND package_debian_tools.cmake "SET(CPACK_PACKAGE_NAME \"${CMAKE_PROJECT_NAME}${MDTLIB_VERSION_SUFFIX}-tools\")\n")
   file(APPEND package_debian_tools.cmake "SET(CPACK_PACKAGE_VENDOR \"Philippe\")\n")
   file(APPEND package_debian_tools.cmake "SET(CPACK_PACKAGE_VERSION \"${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}\")\n")
   file(APPEND package_debian_tools.cmake "SET(CPACK_PACKAGE_VERSION_MAJOR \"${CPACK_PACKAGE_VERSION_MAJOR}\")\n")
@@ -406,7 +418,7 @@ endif(UNIX)
 #### dbg package ####
 if(UNIX)
   file(WRITE  package_debian_dbg.cmake "SET(CPACK_CMAKE_GENERATOR \"Unix Makefiles\")\n")
-  file(APPEND package_debian_dbg.cmake "SET(CPACK_DEBIAN_PACKAGE_DEPENDS \"${CMAKE_PROJECT_NAME}-lib (>= ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})\")\n")
+  file(APPEND package_debian_dbg.cmake "SET(CPACK_DEBIAN_PACKAGE_DEPENDS \"${CMAKE_PROJECT_NAME}${MDTLIB_VERSION_SUFFIX}-lib (>= ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})\")\n")
   file(APPEND package_debian_dbg.cmake "SET(CPACK_DEBIAN_PACKAGE_PRIORITY \"optional\")\n")
   file(APPEND package_debian_dbg.cmake "SET(CPACK_DEBIAN_PACKAGE_SECTION \"libs\")\n")
   file(APPEND package_debian_dbg.cmake "SET(CPACK_GENERATOR \"DEB\")\n")
@@ -416,8 +428,8 @@ if(UNIX)
   file(APPEND package_debian_dbg.cmake "SET(CPACK_PACKAGE_DEFAULT_LOCATION \"/\")\n")
   file(APPEND package_debian_dbg.cmake "SET(CPACK_PACKAGE_DESCRIPTION \"Multi Diag Tools library\")\n")
   file(APPEND package_debian_dbg.cmake "SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY \"Multi Diag Tools is a library that offers some connectivity to instruments\")\n")
-  file(APPEND package_debian_dbg.cmake "SET(CPACK_PACKAGE_FILE_NAME \"${CMAKE_PROJECT_NAME}-dbg_${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}_${CMAKE_SYSTEM_PROCESSOR}\")\n")
-  file(APPEND package_debian_dbg.cmake "SET(CPACK_PACKAGE_NAME \"${CMAKE_PROJECT_NAME}-dbg\")\n")
+  file(APPEND package_debian_dbg.cmake "SET(CPACK_PACKAGE_FILE_NAME \"${CMAKE_PROJECT_NAME}${MDTLIB_VERSION_SUFFIX}-dbg_${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}_${CMAKE_SYSTEM_PROCESSOR}\")\n")
+  file(APPEND package_debian_dbg.cmake "SET(CPACK_PACKAGE_NAME \"${CMAKE_PROJECT_NAME}${MDTLIB_VERSION_SUFFIX}-dbg\")\n")
   file(APPEND package_debian_dbg.cmake "SET(CPACK_PACKAGE_VENDOR \"Philippe\")\n")
   file(APPEND package_debian_dbg.cmake "SET(CPACK_PACKAGE_VERSION \"${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}\")\n")
   file(APPEND package_debian_dbg.cmake "SET(CPACK_PACKAGE_VERSION_MAJOR \"${CPACK_PACKAGE_VERSION_MAJOR}\")\n")
@@ -428,4 +440,31 @@ if(UNIX)
   file(APPEND package_debian_dbg.cmake "SET(CPACK_SET_DESTDIR \"OFF\")\n")
   file(APPEND package_debian_dbg.cmake "SET(CPACK_SYSTEM_NAME \"Linux\")\n")
   file(APPEND package_debian_dbg.cmake "SET(CPACK_TOPLEVEL_TAG \"Linux\")\n")
+endif(UNIX)
+
+#### data package ####
+if(UNIX)
+  file(WRITE  package_debian_data.cmake "SET(CPACK_CMAKE_GENERATOR \"Unix Makefiles\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_DEBIAN_PACKAGE_DEPENDS \"\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_DEBIAN_PACKAGE_PRIORITY \"optional\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_DEBIAN_PACKAGE_SECTION \"libs\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_GENERATOR \"DEB\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_INSTALL_CMAKE_PROJECTS \"${PROJECT_SOURCE_DIR};${CMAKE_PROJECT_NAME};data;/\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_INSTALL_PREFIX \"\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_PACKAGE_CONTACT \"Philippe \")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_PACKAGE_DEFAULT_LOCATION \"/\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_PACKAGE_DESCRIPTION \"Multi Diag Tools library\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY \"Multi Diag Tools is a library that offers some connectivity to instruments\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_PACKAGE_FILE_NAME \"${CMAKE_PROJECT_NAME}-data_${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}_${CMAKE_SYSTEM_PROCESSOR}\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_PACKAGE_NAME \"${CMAKE_PROJECT_NAME}-data\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_PACKAGE_VENDOR \"Philippe\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_PACKAGE_VERSION \"${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_PACKAGE_VERSION_MAJOR \"${CPACK_PACKAGE_VERSION_MAJOR}\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_PACKAGE_VERSION_MINOR \"${CPACK_PACKAGE_VERSION_MINOR}\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_PACKAGE_VERSION_PATCH \"${CPACK_PACKAGE_VERSION_PATCH}\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_RESOURCE_FILE_LICENSE \"${PROJECT_SOURCE_DIR}/COPYING.LESSER\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_RESOURCE_FILE_README \"${PROJECT_SOURCE_DIR}/README\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_SET_DESTDIR \"OFF\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_SYSTEM_NAME \"Linux\")\n")
+  file(APPEND package_debian_data.cmake "SET(CPACK_TOPLEVEL_TAG \"Linux\")\n")
 endif(UNIX)
