--- a/tests/mdtserialport/CMakeLists.txt
+++ b/tests/mdtserialport/CMakeLists.txt
@@ -9,26 +9,26 @@ project (multidiagtools)
 # Target mdtSerialPortTest
 QT4_WRAP_CPP (MDT_SERIAL_PORT_TEST_HEADER mdtSerialPortTest.h)
 add_executable (mdtserialporttest mdtSerialPortTest.cpp ${MDT_SERIAL_PORT_TEST_HEADER})
-target_link_libraries(mdtserialporttest "mdtutils")
-target_link_libraries(mdtserialporttest "mdtport")
-target_link_libraries(mdtserialporttest "mdtserialport")
+target_link_libraries(mdtserialporttest "mdtutils${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtserialporttest "mdtport${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtserialporttest "mdtserialport${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtserialporttest "mdttest")
 target_link_libraries(mdtserialporttest ${QT_LIBRARIES})
 
 # Target mdtSerialPortConfigTest
 QT4_WRAP_CPP (MOC_MDT_SERIAL_PORT_CONFIG_TEST_HEADER mdtSerialPortConfigTest.h)
 add_executable (mdtserialportconfigtest mdtSerialPortConfigTest.cpp ${MOC_MDT_SERIAL_PORT_CONFIG_TEST_HEADER})
-target_link_libraries(mdtserialportconfigtest "mdtutils")
-target_link_libraries(mdtserialportconfigtest "mdtport")
-target_link_libraries(mdtserialportconfigtest "mdtserialport")
+target_link_libraries(mdtserialportconfigtest "mdtutils${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtserialportconfigtest "mdtport${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtserialportconfigtest "mdtserialport${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtserialportconfigtest "mdttest")
 target_link_libraries(mdtserialportconfigtest ${QT_LIBRARIES})
 
 # Target mdtSerialPortManagerTest
 QT4_WRAP_CPP (MDT_SERIAL_PORT_MANAGER_TEST_HEADER mdtSerialPortManagerTest.h)
 add_executable (mdtserialportmanagertest mdtSerialPortManagerTest.cpp ${MDT_SERIAL_PORT_MANAGER_TEST_HEADER})
-target_link_libraries(mdtserialportmanagertest "mdtutils")
-target_link_libraries(mdtserialportmanagertest "mdtport")
-target_link_libraries(mdtserialportmanagertest "mdtserialport")
+target_link_libraries(mdtserialportmanagertest "mdtutils${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtserialportmanagertest "mdtport${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtserialportmanagertest "mdtserialport${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtserialportmanagertest "mdttest")
 target_link_libraries(mdtserialportmanagertest ${QT_LIBRARIES})
