Cleanup in USBTMC setup dialog

--- a/src/mdtport/CMakeLists.txt
+++ b/src/mdtport/CMakeLists.txt
@@ -74,7 +74,7 @@ set (FORM_FILES
           mdtPortConfigWidget.ui
           # Setup dialogs
           mdtAbstractPortSetupDialog.ui
-          mdtUsbtmcPortSetupDialog.ui
+          #mdtUsbtmcPortSetupDialog.ui
     )
 
 # Liste des fichiers rcc (ressources)
