Workin on Windows compilation

--- a/src/mdtutilsgui/CMakeLists.txt
+++ b/src/mdtutilsgui/CMakeLists.txt
@@ -6,18 +6,32 @@
 project (multidiagtools)
 
 # Qwt library
-find_library(Qwt REQUIRED)
-if(NOT DEFINED QWT_FOUND)
-  if(WIN32)
-    include_directories("C:/qwt")
-    include_directories("C:/qwt-6.0.0")
-    include_directories("C:/qwt-6.0.1")
-    include_directories("C:/qwt-6.0.2")
-  else(WIN32)
-    include_directories("/usr/local/include/qwt")
-    include_directories("/usr/include/qwt")
-  endif(WIN32)
-endif(NOT DEFINED QWT_FOUND)
+#find_library(Qwt REQUIRED)
+#find_package(Qwt REQUIRED)
+# if(NOT DEFINED QWT_FOUND)
+#   if(WIN32)
+#     include_directories("C:/qwt")
+#     include_directories("C:/qwt-6.0.0")
+#     include_directories("C:/qwt-6.0.1")
+#     include_directories("C:/qwt-6.0.2")
+#   else(WIN32)
+#     include_directories("/usr/local/include/qwt")
+#     include_directories("/usr/include/qwt")
+#   endif(WIN32)
+# endif(NOT DEFINED QWT_FOUND)
+#include_directories(${QWT_INCLUDE_DIRS})
+#message("qwt found : ${QWT_FOUND}")
+#message("qwt inc: ${QWT_INCLUDE_DIRS}")
+#message("qwt lib: ${QWT_LIBRARIES}")
+#find_path(QWT_LIBRARY_DIR NAMES ${QWT_LIBRARIES})
+#get_filename_component(QWT_LIBRARY_DIR ${QWT_LIBRARIES} PATH)
+#message("Qwt lib dir: ${QWT_LIBRARY_DIR}")
+#message("PATH: $ENV{PATH}")
+#list(FIND $ENV{PATH} ${QWT_LIBRARY_DIR} QWT_LIBRARY_DIR_IN_PATH)
+#message("lib dir in path: ${QWT_LIBRARY_DIR_IN_PATH}")
+
+#include_directories(${QWT_INCLUDE_DIRS})
+
 
 # Liste des fichiers d'entêtes Qt (entêtes contenant Q_OBJECT)
 set (HEADER_FILES 
@@ -94,6 +108,7 @@ QT4_ADD_RESOURCES (RCC_FILES ${RESOURCE_FILES})
 add_library (mdtutilsgui${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES} ${MOC_HEADERS} ${UIC_HEADERS} ${RCC_FILES})
 target_link_libraries(mdtutilsgui${MDTLIB_VERSION_SUFFIX} ${QT_LIBRARIES})
 target_link_libraries(mdtutilsgui${MDTLIB_VERSION_SUFFIX} "qwt")
+target_link_libraries(mdtutilsgui${MDTLIB_VERSION_SUFFIX} "mdtutils${MDTLIB_VERSION_SUFFIX}")
 
 # Version statique
 # if(MDT_BUILD_STATIC_LIBS)
